# sonic-recomp-android-test

./: README.md
AndroidProject/: README_INTEGRACAO.md  build.gradle  local.properties.template  settings.gradle
AndroidProject/app/: build.gradle
AndroidProject/app/src/main/: AndroidManifest.xml
AndroidProject/app/src/main/assets/: INSTRUCOES_ASSETS.txt
AndroidProject/app/src/main/assets/game/: README.md
AndroidProject/app/src/main/cpp/: CMakeLists.txt
AndroidProject/app/src/main/cpp/apu/: apu_android.cpp  apu_android.h
AndroidProject/app/src/main/cpp/audio/: audio_android.cpp  audio_android.h
AndroidProject/app/src/main/cpp/engine_core/: engine_stubs_android.cpp
AndroidProject/app/src/main/cpp/hid/: hid_android.cpp  hid_android.h
AndroidProject/app/src/main/cpp/input/: touch_input.cpp  touch_input.h  virtual_gamepad.cpp  virtual_gamepad.h
AndroidProject/app/src/main/cpp/jni/: jni_bridge.cpp  jni_bridge.h
AndroidProject/app/src/main/cpp/os/android/: logger_android.cpp  logger_android.h  os_android.cpp  process_android.cpp  process_android.h
AndroidProject/app/src/main/cpp/user/: paths_android.cpp  paths_android.h
AndroidProject/app/src/main/cpp/vulkan/: gpu_profile.h  vulkan_android.cpp  vulkan_android.h
AndroidProject/app/src/main/java/com/sega/sonicunleashed/: MainActivity.java
AndroidProject/app/src/main/res/values/: strings.xml
UnleashedRecomp/: main.cpp
UnleashedRecomp/res/macos/: game_icon.icns
docs/: BUILD_ANDROID.md
